Compute functions on new document #LMR-1515